# poc-format-check

./: .gitignore  CMakeLists.txt
poc-format-check/: CMakeLists.txt  main.cpp
